# squirrel_motion_planner

./: .gitignore  .travis.rosinstall  .travis.yml  README.md
birrt_star/robot_motion_control/endeffector_target_tracking/: CMakeLists.txt  package.xml
birrt_star/robot_motion_control/kuka_motion_control/: CMakeLists.txt  package.xml
birrt_star/robot_motion_control/kuka_motion_control/include/kuka_motion_control/: control_laws.h  kdl_kuka_model.h
birrt_star/robot_motion_control/kuka_motion_control/src/: control_laws.cpp  kdl_kuka_model.cpp  motion_control_node.cpp
birrt_star/robot_motion_control/robot_motion_control/: package.xml
birrt_star/robot_motion_planning/bi_rrt_star_multi_robot_algorithm/: CMakeLists.txt  package.xml
birrt_star/robot_motion_planning/bi_rrt_star_multi_robot_algorithm/src/: birrt_star_multi_robot.cpp  run_birrt_star_multi_robot_example.cpp
birrt_star/robot_motion_planning/birrt_star_algorithm/: CMakeLists.txt  package.xml
birrt_star/robot_motion_planning/birrt_star_algorithm/src/: birrt_star.cpp  run_birrt_star_algorithm_lbr_only.cpp  run_birrt_star_algorithm_omnirob_lbr.cpp
birrt_star/robot_motion_planning/old/birrt_star_algorithm/: package.xml
birrt_star/robot_motion_planning/old/planner_msgs/: CMakeLists.txt  package.xml
birrt_star/robot_motion_planning/old/planning_server/: CMakeLists.txt  package.xml
birrt_star/robot_motion_planning/old/planning_world_builder/: package.xml
birrt_star/robot_motion_planning/old/rrt_star_algorithm/: CMakeLists.txt  package.xml
birrt_star/robot_motion_planning/old/rrt_star_algorithm/src/: rrt_star.cpp  (+1 more)
birrt_star/robot_motion_planning/planner_data_structures/: CMakeLists.txt  package.xml
birrt_star/robot_motion_planning/planner_statistics/: CMakeLists.txt  package.xml
birrt_star/robot_motion_planning/planning_heuristics/: CMakeLists.txt  package.xml
birrt_star/robot_motion_planning/planning_scenarios/: CMakeLists.txt  package.xml
birrt_star/robot_motion_planning/planning_scenarios/src/: run_cart_narrow_corridor_scenario.cpp  run_cart_two_rooms_office_scenario.cpp  run_door_scenario.cpp  run_planner_comparison_glass_scenario.cpp
birrt_star/robot_motion_planning/planning_world_builder/: CMakeLists.txt
birrt_star/robot_motion_planning/planning_world_builder/src/: planning_world_builder.cpp
birrt_star/robot_motion_planning/robot_motion_planning/: package.xml
birrt_star/robot_motion_planning/validity_checker/: CMakeLists.txt  package.xml
birrt_star/robot_motion_planning/validity_checker/src/: feasibility_checker.cpp
rviz_robot_marker/: CMakeLists.txt  README.md  package.xml
rviz_robot_marker/include/rviz_robot_marker/: RvizRobotMarkerPublisher.h
rviz_robot_marker/src/: RvizRobotMarkerPublisher.cpp  publish_marker.cpp
squirrel_8dof_planner/: CMakeLists.txt  package.xml
squirrel_8dof_planner/config/: RobotinoPose.cfg  config.rviz  config_testing.rviz  folding_poses_tuw-robotino2.yaml  folding_poses_uibk-robotino2.yaml  parameters.yaml  robotino_description_addition  robotino_plan.srdf  robotino_plan.urdf  robotino_plan_old.urdf  robotino_plan_vis.urdf  room1.bt  room1.ot  room1.world  room2.bt  room2.ot  room2.world  room3.bt  room3.ot  room3.world  room4.bt  room4.ot  room4.world  room5.bt  room5.ot  room5.world  squirrel-hand.dae
squirrel_8dof_planner/doc/: Doxyfile
squirrel_8dof_planner/doc/html/: annotated.html  classSquirrelMotionPlanner_1_1Planner-members.html  classSquirrelMotionPlanner_1_1Planner.html  classes.html  dir_0bc60278b1d638752d7e5f04a7f34d09.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  squirrel__8dof__planner_8h_source.html  squirrel__8dof__planner__structures_8h_source.html  structSquirrelMotionPlanner_1_1AStarNode-members.html  structSquirrelMotionPlanner_1_1AStarNode.html  structSquirrelMotionPlanner_1_1AStarPath2D-members.html  structSquirrelMotionPlanner_1_1AStarPath2D.html  structSquirrelMotionPlanner_1_1Cell2D-members.html  structSquirrelMotionPlanner_1_1Cell2D.html  structSquirrelMotionPlanner_1_1LineSegment2D-members.html  structSquirrelMotionPlanner_1_1LineSegment2D.html  structSquirrelMotionPlanner_1_1ParametricFunctionCubic2D-members.html  structSquirrelMotionPlanner_1_1ParametricFunctionCubic2D.html  structSquirrelMotionPlanner_1_1Tuple2D-members.html  structSquirrelMotionPlanner_1_1Tuple2D.html
squirrel_8dof_planner/doc/html/search/: all_1.js  all_3.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  search.js  variables_0.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js
squirrel_8dof_planner/doc/latex/: annotated.tex  classSquirrelMotionPlanner_1_1Planner.tex  dir_0bc60278b1d638752d7e5f04a7f34d09.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  refman.tex  structSquirrelMotionPlanner_1_1AStarNode.tex  structSquirrelMotionPlanner_1_1AStarPath2D.tex  structSquirrelMotionPlanner_1_1Cell2D.tex  structSquirrelMotionPlanner_1_1LineSegment2D.tex  structSquirrelMotionPlanner_1_1ParametricFunctionCubic2D.tex  structSquirrelMotionPlanner_1_1Tuple2D.tex
squirrel_8dof_planner/include/squirrel_8dof_planner/: base_pose_finder.h  collision_checker.hpp  squirrel_8dof_planner.h  squirrel_8dof_planner_structures.h  squirrel_8dof_planner_structures.hpp
squirrel_8dof_planner/launch/: move_group.launch  planner.launch  real.launch  simulation.launch  testing.launch
squirrel_8dof_planner/src/: base_pose_finder.cpp  squirrel_8dof_planner.cpp  squirrel_8dof_planner_node.cpp  squirrel_8dof_planner_structures.cpp
squirrel_8dof_visualizer/: CMakeLists.txt  package.xml
squirrel_8dof_visualizer/include/squirrel_8dof_visualizer/: squirrel_8dof_visualizer.h
squirrel_8dof_visualizer/src/: squirrel_8dof_visualizer.cpp  squirrel_8dof_visualizer_node.cpp
squirrel_motion_planner/: CMakeLists.txt  package.xml
(+35 files in other folders)
