<?xml version="1.0"?>
<package>
  <name>squirrel_8dof_visualizer</name>
  <version>1.0.0</version>
  <description>The squirrel_8dof_visualizer package</description>
  <maintainer email="philkark@cs.uni-bonn.de">Philipp Karkowski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz_robot_marker</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz_robot_marker</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
