<?xml version="1.0"?>
<package>
  <name>kuka_motion_control</name>
  <version>0.0.0</version>
  <description>The kuka_motion_control package</description>

  <maintainer email="burgetf@informatik.uni-freiburg.de">Felix Burget</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <!-- build_depend>moveit_core</build_depend-->
  <!-- build_depend>moveit_ros_planning</build_depend-->
  <build_depend>tf</build_depend>
  <build_depend>srdfdom</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>cmake_modules</build_depend>

  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <!--run_depend>moveit_core</run_depend-->
  <!--run_depend>moveit_ros_planning</run_depend-->
  <run_depend>srdfdom</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>random_numbers</run_depend>

</package>
