<package>
  <name>robot_motion_control</name>
  <version>0.0.1</version>
  <description>The robot_motion_control stack</description>

 
  <maintainer email="burgetf@informatik.uni-freiburg.de">Felix Burget</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  
  <run_depend>kuka_motion_control</run_depend>
  <run_depend>endeffector_target_tracking</run_depend>
  
  <export>
    <metapackage/> 
  </export>
  
  
  
</package>
