<?xml version="1.0"?>
<package>
  <name>birrt_star_algorithm</name>
  <version>0.0.0</version>
  <description>The birrt_star_algorithm package</description>

  <maintainer email="burgetf@informatik.uni-freiburg.de">Felix Burget</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>kuka_motion_control</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>planning_world_builder</build_depend>
  <build_depend>validity_checker</build_depend>
  <build_depend>planner_data_structures</build_depend>
  <build_depend>planning_heuristics</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rviz_visual_tools</build_depend>

  
  <run_depend>kuka_motion_control</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>planning_world_builder</run_depend>
  <run_depend>validity_checker</run_depend>
  <run_depend>planner_data_structures</run_depend>
  <run_depend>planning_heuristics</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rviz_visual_tools</run_depend>

</package>
